Finished: Add files to github

--- a/Target Sistemas.csproj
+++ b/Target Sistemas.csproj
@@ -9,6 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="dados.json" />
+    <None Remove="dados.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="dados.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dados.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Resources\" />
   </ItemGroup>
 
